<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>eCommerceFramework</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>eCommerceFramework</name>
    <url>http://maven.apache.org</url>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>${surefireArgLine}</argLine>
                    <suiteXmlFiles>
                        <suiteXmlFile>${project.basedir}/${suiteXml.file}</suiteXmlFile>
                    </suiteXmlFiles>
                    <groups>${testng.groups}</groups>
                    <excludedGroups>${testng.excludedGroups}</excludedGroups>
                    <properties>
                        <property>
                            <name>parallel</name>
                            <value>${testng.parallel}</value>
                        </property>
                        <property>
                            <name>threadcount</name>
                            <value>${testng.threadCount}</value>
                        </property>
                        <property>
                            <name>dataproviderthreadcount</name>
                            <value>${testng.dataProviderThreadCount}</value>
                        </property>
                    </properties>
                    <systemPropertyVariables>
                        <test.env>${test.env}</test.env>
                        <browser>${browser}</browser>
                        <headless>${headless}</headless>
                        <baseUrl>${baseUrl}</baseUrl>
                        <downloadDir>${downloadDir}</downloadDir>
                        <pageLoadTimeout>${pageLoadTimeout}</pageLoadTimeout>
                        <waitTimeout>${waitTimeout}</waitTimeout>
                    </systemPropertyVariables>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>2.17.0</version>
            </plugin>
        </plugins>
    </build>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <allure.version>2.24.0</allure.version>
        <suiteXml.file>testng.xml</suiteXml.file>
        <aspectj.version>1.9.25.1</aspectj.version>
        <surefireArgLine>-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"</surefireArgLine>
        <testng.groups></testng.groups>
        <testng.excludedGroups></testng.excludedGroups>
        <testng.parallel>none</testng.parallel>
        <testng.threadCount>1</testng.threadCount>
        <testng.dataProviderThreadCount>1</testng.dataProviderThreadCount>
        <test.env>local</test.env>
        <browser>chrome</browser>
        <headless>false</headless>
        <baseUrl>https://automationexercise.com</baseUrl>
        <downloadDir>downloads</downloadDir>
        <pageLoadTimeout>30</pageLoadTimeout>
        <waitTimeout>5</waitTimeout>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-bom</artifactId>
                <version>${allure.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>4.41.0</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.12.0</version>
        </dependency>
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>smoke</id>
            <properties>
                <testng.groups>smoke</testng.groups>
            </properties>
        </profile>
        <profile>
            <id>regression</id>
            <properties>
                <testng.groups>regression</testng.groups>
            </properties>
        </profile>
        <profile>
            <id>critical-path</id>
            <properties>
                <testng.groups>critical_path</testng.groups>
            </properties>
        </profile>
        <profile>
            <id>ci</id>
            <properties>
                <test.env>ci</test.env>
                <browser>chrome</browser>
                <headless>true</headless>
                <testng.parallel>classes</testng.parallel>
                <testng.threadCount>3</testng.threadCount>
                <testng.dataProviderThreadCount>1</testng.dataProviderThreadCount>
                <downloadDir>target/downloads</downloadDir>
                <pageLoadTimeout>45</pageLoadTimeout>
                <waitTimeout>8</waitTimeout>
            </properties>
        </profile>
    </profiles>
</project>
